# HulluEngine

./: .gitignore  CMakeLists.txt  README.md  calculations.cpp  classes.h  inputs.cpp  loop.cpp  main.cpp  render.cpp  shutdown.cpp  start.cpp
Classes/: GameObject.h  object.h  scene.h
Code/: Shader.cpp  Sprite.cpp  calculations.cpp  cleanup.cpp  engine_functions.h  inputs.cpp  loop.cpp  render.cpp  shutdown.cpp  start.cpp
Headers/: AnimationController.h  Game.h  GameObject.h  PrefabManager.h  Scene.h  SceneManager.h  Shader.h  Sprite.h  SpriteAnimation.h  engine_functions.h
Shaders/: default.vert
